# astrum-verum

./: .gitignore  COMMERCIAL.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
arxiv_paper/: main.tex  references.bib
arxiv_submission/: main.tex  references.bib
astrum_verum/: __init__.py  activation.py  api.py  cognitive.py  defaults.py  engine.py  persistent.py  projector.py  rotation.py  scorer.py  store.py
astrum_verum/extract/: __init__.py  triples.py
astrum_verum/lattice/: __init__.py  base.py  d4.py  e8.py
astrum_verum/vsa/: __init__.py  core.py  memory.py
benchmarks/: VSA_BENCHMARK_SPEC.md  run_benchmark.py  vsa_memory_benchmark.py  vsa_memory_raw.csv  vsa_memory_results.md  vsa_theory_sim.py
docs/: WHY_VSA_WORKS.md  astrum_verum_design.md  structural_memory_vs_rag.md
experiments/vsa_sdm/: phase0_algebra.py  phase0_results.md  phase1_grounding.py  phase1_results.md  phase2_pipeline.py  phase3_full.py
tests/: test_activation.py  test_api.py  test_engine.py  test_engine_pipeline.py  test_geometry.py  test_lattice_d4.py  test_lattice_e8.py  test_persistent.py  test_projector.py  test_rotation.py  test_scorer.py  test_storage_mmap.py  test_store.py  test_topology_graph.py  test_vsa_memory.py
verification_results/: lattice_geometry_summary.md
